# supop-pai-cookiecuttter-template

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter._output_folder }}/: README.md  pyproject.toml
{{ cookiecutter._output_folder }}/.github/: pull_request_template.md
{{ cookiecutter._output_folder }}/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
{{ cookiecutter._output_folder }}/.github/workflows/: CI.yaml
{{ cookiecutter._output_folder }}/docs/: {{ cookiecutter.package_name }}.rst
{{ cookiecutter._output_folder }}/{{ cookiecutter.package_name }}/: main_qt.py
{{ cookiecutter.hyphen_name }}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.hyphen_name }}/docs/: conf.py  evaluation.rst  index.rst
{{ cookiecutter.hyphen_name }}/{{ cookiecutter.underscore_name }}/: main.py
{{ cookiecutter.repo_name }}/: README.md  pyproject.toml
{{ cookiecutter.repo_name }}/docs/: conf.py  evaluation.rst  index.rst  notebooks copy.rst
{{ cookiecutter.repo_name }}/docs/notebooks/: 1_demo_notebook.ipynb
{{ cookiecutter.repo_name }}/test_{{ cookiecutter.package_name }}/: basic_test.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/: main.py  main_nicegui.py  main_qt.py
